@@ -1,5 +1,7 @@
 2015-08-20  François  <francois@dechelle.net>
 
+	* implementation of structure for modules almost complete; compiles ok
+
 	* structure for modules in progress
 
 	* moved builtin modules to separate directory
